fixed css for overflow-wrap

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ a:visited {
 
 button {
     font-family: 'Mouse Memoirs', sans-serif;
+    color: black;
     font-size: 20px;
     background-color: #FFCBC0;
     border: none;
@@ -142,6 +143,7 @@ button:hover {
     padding: 2px 0px 5px 30px;
     margin-bottom: 10px;
     font-family: 'Open Sans', sans-serif;
+    overflow-wrap: anywhere;
 }
 
 .selectable:hover {
@@ -194,6 +196,78 @@ button:hover {
     --animate-duration: 2s;
 }
 
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1024px) {
+    
+    .title {
+        font-size: 100px;
+    }
+    
+    .sub-title {
+        font-size: 30px;
+    }
+    
+    .container {
+        width: 650px;
+    }    
+    
+    .question-counter {
+        font-size: 48px;
+    }
+    
+    .question-text {
+        font-size: 24px;
+    }
+    
+    .answers {
+        font-size: 18px;
+    }
+    
+    .choose-category {
+        font-size: 30px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 600px) {
+    
+    .title {
+        font-size: 80px;
+    }
+    
+    .sub-title {
+        font-size: 24px;
+    }
+
+    .question-text {
+        font-size: 20px;
+    }
+    
+    .answers {
+        font-size: 16px;
+    }
+    
+    .choose-category {
+        font-size: 26px;
+    }
+}
+
+/* Extra small devices (phones, 360px and down) */
+@media only screen and (max-width: 360px) {
+    .title {
+        font-size: 46px;
+    }
+    
+    .sub-title {
+        font-size: 15px;
+    }
+
+    .container {
+        width: 300px;
+    }
+
+}
+
 /* Extra small devices (phones, 280px and down) */
 @media only screen and (max-width: 280px) {
 
@@ -225,10 +299,6 @@ button:hover {
         padding: 0 20px;
         font-size: 14px;
     }
-
-    .answer {
-        overflow-wrap: break-word;
-    }    
     
     button {
         font-size: 16px;
@@ -239,60 +309,3 @@ button:hover {
         font-size: 10px;
     }    
 }
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 600px) {
-    
-    .title {
-        font-size: 80px;
-    }
-    
-    .sub-title {
-        font-size: 24px;
-    }
-
-    .question-text {
-        font-size: 20px;
-    }
-    
-    .answers {
-        font-size: 16px;
-    }
-    
-    .choose-category {
-        font-size: 26px;
-    }
-    
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1024px) {
-    
-    .title {
-        font-size: 100px;
-    }
-    
-    .sub-title {
-        font-size: 30px;
-    }
-
-    .container {
-        width: 650px;
-    }    
-
-    .question-counter {
-        font-size: 48px;
-    }
-
-    .question-text {
-        font-size: 24px;
-    }
-
-    .answers {
-        font-size: 18px;
-    }
-    
-    .choose-category {
-        font-size: 30px;
-    }
- }
